<resources>
    <string name="app_name">Menual</string>
    <string name="action_recommendations">Recommendations</string>
    <string name="action_diet_preferences">Diet Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_diet_preferences">Diet Preferences</string>
    <string name="action_save">Save</string>
    <string name="title_activity_text_selection">Select Food</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_clear_history">Clear History</string>
    <string name="title_hints">Search database</string>
    <string name="history_tab"></string>
    <string name="title_activity_tab">Interests</string>
<<<<<<< HEAD
    <string name="prefs_settings_header">Settings</string>
    <string name="prefs_account_header">Account</string>
    <string name="title_activity_diet_manual">Manual Selection</string>
=======
    <string name="title_stats_detailed">Detailed Statistics</string>
    <string name="title_statistics">Statistics</string>
>>>>>>> a62afc363e4e4faa4648365918a2a2669134b5c4

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
